--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">CineMates</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--Chip to filter movie by specification-->
+    <string name="chip_popular">Popular</string>
+    <string name="chip_upcoming">Upcoming
+    </string>
+    <string name="chip_top_rated">Top Rated</string>
 </resources>
