--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="chip_upcoming">Upcoming
     </string>
     <string name="chip_top_rated">Top Rated</string>
+    <string name="chip_on_air">On the Air</string>
 </resources>
