--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CineMates</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!--Chip to filter movie by specification-->
+    <!--Chip to movieFilter movie by specification-->
     <string name="chip_popular">Popular</string>
     <string name="chip_upcoming">Upcoming
     </string>
@@ -17,4 +17,5 @@
     <string name="sort_original_title">Original Title</string>
     <string name="sort_vote_average">Vote Average</string>
     <string name="sort_vote_count">Vote Count</string>
+    <string name="sort_first_air_date">First Air Date</string>
 </resources>
