--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,12 @@
     </string>
     <string name="chip_top_rated">Top Rated</string>
     <string name="chip_on_air">On the Air</string>
+
+    <!--    Sorting Order -->
     <string name="order_asc">Ascendant</string>
     <string name="order_desc">Descendant</string>
+
+    <!--    Sorting Options-->
     <string name="sort_popularity">Popularity</string>
     <string name="sort_release_date">Release Date</string>
     <string name="sort_revenue">Revenue</string>
@@ -18,4 +22,15 @@
     <string name="sort_vote_average">Vote Average</string>
     <string name="sort_vote_count">Vote Count</string>
     <string name="sort_first_air_date">First Air Date</string>
+
+    <!--    Tv Type options-->
+    <string name="tv_type_video">Video</string>
+    <string name="tv_type_talk_show">Talk Show</string>
+    <string name="tv_type_scripted">Scripted</string>
+    <string name="tv_type_reality">Reality</string>
+    <string name="tv_type_miniseries">Miniseries</string>
+    <string name="tv_type_news">News</string>
+    <string name="tv_type_documentary">Documentary</string>
+
+
 </resources>
