--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CineMates</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!--Chip to movieFilter movie by specification-->
+    <!--Chip to mediaFilter movie by specification-->
     <string name="chip_popular">Popular</string>
     <string name="chip_upcoming">Upcoming
     </string>
