refactor: Corrected section names and improved dimensions

--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="section_popular_movie">\nPopular Movies</string>
-    <string name="section_top_rated_movie">Top rated</string>
-    <string name="section_upcoming_movie">Upcoming</string>
-    <string name="section_trending_movie">Trending</string>
-    <string name="section_popular_tv">Popular</string>
-    <string name="section_trending_tv">Trending</string>
-    <string name="section_onTheAir_tv">On The Air</string>
-    <string name="section_popular_people">Popular</string>
+    <string name="section_popular_movie">Popular Movies</string>
+    <string name="section_top_rated_movie">Top rated Movies</string>
+    <string name="section_upcoming_movie">Upcoming Movies</string>
+    <string name="section_trending_movie">Trending Movies</string>
+    <string name="section_popular_tv">Popular Tv Show</string>
+    <string name="section_trending_tv">Trending Tv Show</string>
+    <string name="section_onTheAir_tv">On The Air Tv Show</string>
+    <string name="section_popular_people">Popular people</string>
 </resources>
