refactor: Removed the collection dialog. Added a new fragment.

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="fragment_media_similar">Similar</string>
     <string name="fragment_media_cast">Cast</string>
     <string name="fragment_media_about">About</string>
+    <string name="fragment_collection">Collection</string>
+
 
 
 </resources>
