feat: Implemented person details.

--- a/core/model/src/main/res/values/strings.xml
+++ b/core/model/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="release_digital">Digital</string>
     <string name="release_physical">Physical</string>
     <string name="release_tv">TV</string>
+    <string name="non_binary_gender">Non Binary</string>
 
 
 </resources>
