--- a/core/model/filter/src/main/res/values/strings.xml
+++ b/core/model/filter/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--Base-->
     <string name="ascending_popularity">Less popular</string>
     <string name="descending_popularity">Most popular</string>
+
+    <!-- Movie-->
     <string name="ascending_vote_average">Lowest vote average</string>
     <string name="descending_vote_average">Highest vote average</string>
+    <string name="descending_revenue">Most profitable</string>
+    <string name="ascending_revenue">Least profitable</string>
+    <string name="descending_vote_count">Top rated</string>
+    <string name="ascending_vote_count">Least Voted</string>
 </resources>
