--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="fragment_media_about">About</string>
     <string name="fragment_collection">Collection</string>
     <string name="fragment_movie_title">Movie</string>
+    <string name="fragment_tv_title">Tv Show</string>
 
     <!--    Sorting Order -->
     <string name="order_asc">Ascendant</string>
